Closed Bug 703175 Opened 13 years ago Closed 12 years ago

nsImportTextAddress::DetermineDelim seems wrong

Categories

(MailNews Core :: Import, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 16.0

People

(Reporter: hiro, Assigned: hiro)

References

Details

Attachments

(2 files, 2 obsolete files)

As you can see from the fact that some variable names contain 'line' word in nsImportTextAddress::DeteminDelim, The function aims to count tab and comma line by line but actually it fails. First, NULL-terminated position is always kTextAddressBufferSz - 1, it should be read bytes from stream, in this case it's 'left' variable. (The variable name is not good at all, by the way) Second, nsIInputStream is used instead of nsILineInputStream.
Attached patch Fix (obsolete) — Splinter Review
Assignee: nobody → hiikezoe
Attachment #575078 - Flags: review?(dbienvenu)
Attached patch A test (obsolete) — Splinter Review
Attachment #575079 - Flags: review?(dbienvenu)
(In reply to Hiroyuki Ikezoe (:hiro) from comment #2) > Created attachment 575079 [details] [diff] [review] [diff] [details] [review] > A test This test depend on importHelper.js in bug 700920.
Status: NEW → ASSIGNED
Depends on: 700920
Comment on attachment 575078 [details] [diff] [review] Fix The patch didn't apply cleanly, but when I fixed it, it passed the tests...
Attachment #575078 - Flags: review?(dbienvenu) → review+
Attachment #575079 - Flags: review?(dbienvenu) → review+
Attached patch De-rotted patchSplinter Review
Attachment #575078 - Attachment is obsolete: true
Attachment #636594 - Flags: review+
Attached patch De-rotted testSplinter Review
Attachment #575079 - Attachment is obsolete: true
Attachment #636595 - Flags: review+
So should these be checkin-needed ?
(In reply to Ludovic Hirlimann [:Usul] from comment #7) > So should these be checkin-needed ? Yes. Thanks for the notice. I do sometimes forget the flag.
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Flags: in-testsuite+
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 16.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: