Bug 703175 - nsImportTextAddress::DetermineDelim seems wrong. r=dbienvenu